--- a/package.json
+++ b/package.json
@@ -5,13 +5,26 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config server.mjs"
+    "start": "node server.js",
+    "dev": "nodemon -r dotenv/config server/server.js",
+    "reset-database": "node -r dotenv/config server/db/scripts/reset-database.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.0",
+    "uuid": "^9.0.1"
+  },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.9"
+    "@types/node": "^20.8.9",
+    "nodemon": "^3.0.1",
+    "rundev": "^0.0.0"
   }
 }
