updated start script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server/server.js",
     "dev": "nodemon -r dotenv/config server/server.js",
     "reset-database": "node -r dotenv/config server/db/scripts/reset-database.js"
   },
