--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config server.js",
-    "dev": "nodemon -r dotenv/config server.js",
+    "start": "node -r dotenv/config server/server.js",
+    "dev": "nodemon -r dotenv/config server/server.js",
     "reset-database": "node -r dotenv/config server/db/scripts/reset-database.js"
   },
   "keywords": [],
