fixed bug where user data didn't appear on user page

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node -r dotenv/config server/server.js",
     "dev": "nodemon -r dotenv/config server/server.js",
-    "reset-database": "node -r dotenv/config server/db/scripts/reset-database.js"
+    "reset-database": "node -r dotenv/config server/db/scripts/reset-database.js",
+    "test-user": "node -r dotenv/config server/db/scripts/test-user.js"
   },
   "keywords": [],
   "author": "",
